--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,58 @@
 .container {
   display: grid;
-  grid-template-areas: "";
+  grid-template-columns: 1.5fr 1fr 1fr;
+  gap: 20px 10px;
+  grid-template-areas:
+    "box1 box1 box2"
+    "box3 box3 box3"
+    "box4 box5 box5"
+    "box6 box6 box7"
+    "box8 box9 box10"
+    "box11 box11 box11";
+}
+
+.cox1 {
+  grid-area: box1;
+  background-color: black;
+  color: white;
+}
+.box2 {
+  grid-area: box2;
+  background-color: aqua;
+}
+.box3 {
+  grid-area: box3;
+  background-color: blue;
+}
+.box4 {
+  grid-area: box4;
+  background-color: beige;
+}
+.box5 {
+  grid-area: box5;
+  background-color: blueviolet;
+}
+.box6 {
+  grid-area: box6;
+  background-color: brown;
+}
+.box7 {
+  grid-area: box7;
+  background-color: burlywood;
+}
+.box8 {
+  grid-area: box8;
+  background-color: cadetblue;
+}
+.box9 {
+  grid-area: box9;
+  background-color: chartreuse;
+}
+.box10 {
+  grid-area: box10;
+  background-color: chocolate;
+}
+.box11 {
+  grid-area: box11;
+  background-color: coral;
 }
