--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 1.5fr 1fr 1fr;
+  grid-template-rows: repeat(6, 100px);
   gap: 20px 10px;
   grid-template-areas:
     "box1 box1 box2"
@@ -11,7 +12,7 @@
     "box11 box11 box11";
 }
 
-.cox1 {
+.box1 {
   grid-area: box1;
   background-color: black;
   color: white;
