--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,15 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+body {
+  padding: 5px;
+}
+
 .container {
   display: grid;
-  grid-template-columns: 1.5fr 1fr 1fr;
-  grid-template-rows: repeat(6, 100px);
-  gap: 20px 10px;
+  grid-template-columns: 1.4fr 1fr 1fr;
+  gap: 15px 10px;
   grid-template-areas:
     "box1 box1 box2"
     "box3 box3 box3"
@@ -12,48 +19,52 @@
     "box11 box11 box11";
 }
 
-.box1 {
-  grid-area: box1;
-  background-color: black;
-  color: white;
-}
 .box2 {
   grid-area: box2;
-  background-color: aqua;
+}
+.box4 {
+  grid-area: box4;
+}
+.box5 {
+  grid-area: box5;
+}
+.box6 {
+  grid-area: box6;
+}
+.box7 {
+  grid-area: box7;
+}
+.box8 {
+  grid-area: box8;
+}
+.box9 {
+  grid-area: box9;
+}
+.box10 {
+  grid-area: box10;
+}
+.box11 {
+  grid-area: box11;
+}
+
+.box {
+  border: 1px solid lightgray;
+  border-radius: 6px;
+  padding: 15px;
+  background-color: whitesmoke;
+  color: darkblue;
+}
+
+.box1 {
+  grid-area: box1;
+  background-color: rgb(55, 55, 55);
+  color: white;
 }
 .box3 {
   grid-area: box3;
   background-color: blue;
+  color: white;
 }
-.box4 {
-  grid-area: box4;
-  background-color: beige;
-}
-.box5 {
-  grid-area: box5;
-  background-color: blueviolet;
-}
-.box6 {
-  grid-area: box6;
-  background-color: brown;
-}
-.box7 {
-  grid-area: box7;
-  background-color: burlywood;
-}
-.box8 {
-  grid-area: box8;
-  background-color: cadetblue;
-}
-.box9 {
-  grid-area: box9;
-  background-color: chartreuse;
-}
-.box10 {
-  grid-area: box10;
-  background-color: chocolate;
-}
-.box11 {
-  grid-area: box11;
-  background-color: coral;
+h3 {
+  margin-bottom: 10px;
 }
